--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
----
 language: ruby
 rvm:
-  - ruby-head
-  - 2.0.0
-  - 1.9.3
-  - jruby-19mode
-  - rbx-19mode
+- ruby-head
+- 2.0.0
+- 1.9.3
+- jruby-19mode
+- rbx-19mode
 notifications:
   email: false
   irc:
     channels:
-      - irc.oftc.net#akerl
-...
+    - irc.oftc.net#akerl
+    channel_key:
+      secure: RpczmZJrvV9g0U4dq498gbacsc+Gpd9Teb4xrX3lV9G6nbl9Rk1pv0dLBiwllXe7+dSpF/t4mmK9BKISbEOuqJrQuFPcqZfWvOSglpizECX64EkiDM40XqvBrda+/w/k2mDgtrm5O5DuFWuYI0MHnCK8S4U+GPNQo6/OnSyc1ow=
