--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ notifications:
   email: false
   irc:
     channels:
-      - irc.oftc.net#akerl
+        - secure: "M6RUMyoudWxOv9kJxXUIdScrRY05+nyz8YCAcY7xCQpmHcINdi1UGNrQAN3/ZOx+4a8feSt7x5+zQ6qApZcxG4pJHwEAGlk0WzC/twUPNTVaEJFe/be34kqX57kSzavsCJyD/ke1a5s21MzR4K3S3OJXn17iog/ozsspnxNaz+g="
     channel_key: sekrit
     template:
       - '%{repository}/%{branch}/%{build_number}: %{message} -- %{build_url}'
