--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ notifications:
   email: false
   irc:
     channels:
-        - secure: "M6RUMyoudWxOv9kJxXUIdScrRY05+nyz8YCAcY7xCQpmHcINdi1UGNrQAN3/ZOx+4a8feSt7x5+zQ6qApZcxG4pJHwEAGlk0WzC/twUPNTVaEJFe/be34kqX57kSzavsCJyD/ke1a5s21MzR4K3S3OJXn17iog/ozsspnxNaz+g="
-    channel_key: sekrit
+      - irc.oftc.net#akerl
+    channel_key:
+      secure: "KgYL1Re0ThDujwlm/jwmM633zEnWpQLi9njynO1nrFFKY24zFmHzFaJwWuDunYFjslCAM9PKEiFSimXUglFJCpAD5ez3FHuDZiT2xLIAsfQUPk2u7D0FtOEd1DE2h/+XleRh+m16JntJ0sfd3GCKXVNoAjI665R2P/Iv/djkL+Y="
     template:
       - '%{repository}/%{branch}/%{build_number}: %{message} -- %{build_url}'
