--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ notifications:
     channels:
       - irc.oftc.net#akerl
     channel_key:
-      - secure: "KgYL1Re0ThDujwlm/jwmM633zEnWpQLi9njynO1nrFFKY24zFmHzFaJwWuDunYFjslCAM9PKEiFSimXUglFJCpAD5ez3FHuDZiT2xLIAsfQUPk2u7D0FtOEd1DE2h/+XleRh+m16JntJ0sfd3GCKXVNoAjI665R2P/Iv/djkL+Y="
+      secure: "AFEdB/WjJAI7N1LJcdBS/qtyR7hwrY0HEUp1Tq2Wyr9ieFl8VpN+GjRdncjGq+rtZe5jpE1Ind5GErHStg6UTLkocOo1ITcxLwpUhMatox6RdGLsFwTVWymV00KwRTD4S+X5cU9dfGlmGOTNuvDEjh6IarAmnQ/qb9ZX0slJHQg="
     template:
       - '%{repository}/%{branch}/%{build_number}: %{message} -- %{build_url}'
