--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,6 @@ notifications:
   irc:
     channels:
       - ircs://irc.oftc.net:6697#akerl
-    channel_key:
-      secure: "AFEdB/WjJAI7N1LJcdBS/qtyR7hwrY0HEUp1Tq2Wyr9ieFl8VpN+GjRdncjGq+rtZe5jpE1Ind5GErHStg6UTLkocOo1ITcxLwpUhMatox6RdGLsFwTVWymV00KwRTD4S+X5cU9dfGlmGOTNuvDEjh6IarAmnQ/qb9ZX0slJHQg="
+    channel_key: sekrit
     template:
       - '%{repository}/%{branch}/%{build_number}: %{message} -- %{build_url}'
