--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,6 @@ notifications:
   email: false
   irc:
     channels:
-      - ircs://irc.oftc.net:6697#akerl
-    channel_key: sekrit
+    - secure: NHoXuLan4NfkC00oLCXcXoYTlfFfJG/YpyGfhgk89EKBhymmBKdgYvAF1BUZ6a7olhTxt8CTNTKa8xu2lF4ET1JyHkFQwYTjp0HvCY0mpVtm7PbBEzoiK7nQWH1bkBMIYHOcmyBHmtK71iFXlXMFOxz1T1MfjLHq2PSQ6OlB6OU=
     template:
-      - '%{repository}/%{branch}/%{build_number}: %{message} -- %{build_url}'
+    - "%{repository}/%{branch}/%{build_number}: %{message} -- %{build_url}"
